<resources>

    <string name="app_name">Popular Movies</string>
    <string name="app_description">Movie description</string>

    <!-- Main Activity - Menu & Bottom Navigation-->
    <string name="menu_sorting">Spinner Sorting</string>
    <string-array name="sorting_modes">
        <item>Popularity</item>
        <item>Average Vote</item>
    </string-array>
    <string name="nav_bot_popularity">Popularity</string>
    <string name="nav_bot_average_vote">High rated</string>
    <string name="nav_bot_favorites">Favorites</string>

    <!-- Main Activity - Retrieving Movies data -->
    <string name="internet_error_message">Problems to retrieve information from Database</string>

    <!-- Description Activity - Data -->
    <string name="description_default_description_image_big">image of movie image as presentation</string>
    <string name="description_default_description_image_small">poster of movie</string>
    <string name="description_default_text_Title">Title Test</string>
    <string name="description_default_text_Release_date">2018–02–12</string>
    <string name="description_label_overview">Synopsis</string>
    <string name="description_default_text_Overview">Casual things. Believing they have left behind
        shadowy figures from their past, newlyweds Christian and Ana fully embrace an inextricable
        connection and shared life of luxury. But just as she steps into her role as Mrs. Grey and
        he relaxes into an unfamiliar stability, new threats could jeopardize their happy ending
        before it even begins. A lot of people think that none is able to think to the future.
        Three monkey are on the top of the tree, two in the middle, and one on the bottom. The one
        under the tree is the one that rules the others. I remember when it happen, the sky crushed
        on the head of the saviors, too much busy to sleep and eat. Remember the day I set you free.
        I told you can always count on me darling.</string>
    <string name="description_label_voteAverage">Vote</string>
    <string name="description_default_text_voteAverage">7.8</string>
    <string name="description_default_text_TMDB_logo">this information are retrieved from</string>
    <string name="description_label_rv_trailers">Trailers</string>
    <string name="description_label_rv_reviews">Reviews</string>
    <string name="description_default_description_image_TMDB_logo">Logo of TMDB</string>

    <!-- Layout - movie_list -->
    <string name="tv_title_default">NOT DEFINED</string>
    <string name="iv_poster_description">Poster of the movie</string>

    <!-- Layout - trailers_list -->
    <string name="trailer_tv_title">...</string>
    <string name="trailer_iv_description">Thumbnail of the trailer</string>
    <!-- Layout - reviews_list -->
    <string name="review_tv_author">Anonimo</string>
    <string name="review_tv_review">I don\'t really know what to say... I\'m a little bit depressed</string>

</resources>
