<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/cl_description_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context="com.example.simone.popularmovies.DescriptionActivity">


        <ImageView
            android:id="@+id/iv_poster_big"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:contentDescription="@string/description_default_description_image_big"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/iv_poster_small"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/description_default_description_image_small"
            app:layout_constraintBottom_toBottomOf="@+id/iv_poster_big"
            app:layout_constraintDimensionRatio="w,2:3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster_big"
            app:layout_constraintVertical_bias="0.617"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_description_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:maxWidth="180dp"
            android:text="@string/description_default_text_Title"
            android:textColor="@color/description_label"
            android:textSize="@dimen/label_description_text"
            app:layout_constraintStart_toEndOf="@+id/iv_poster_small"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster_big" />

        <TextView
            android:id="@+id/tv_description_movie_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/description_default_text_Release_date"
            android:textColor="@color/description_value_date"
            android:textSize="@dimen/value_description_date"
            app:layout_constraintStart_toStartOf="@+id/tv_description_movie_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_description_movie_title" />

        <TextView
            android:id="@+id/tv_description_averageVote_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:text="@string/description_label_voteAverage"
            android:textColor="@color/description_label_vote"
            android:textSize="@dimen/label_description_vote"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_description_movie_title" />

        <TextView
            android:id="@+id/tv_description_movie_average_vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/description_default_text_voteAverage"
            android:textColor="@color/description_value_vote"
            android:textSize="@dimen/value_description_vote"
            app:layout_constraintEnd_toStartOf="@+id/tv_description_averageVote_label"
            app:layout_constraintStart_toEndOf="@+id/tv_description_averageVote_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_description_averageVote_label" />

        <TextView
            android:id="@+id/tv_description_overview_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/description_label_overview"
            android:textColor="@color/description_label"
            android:textSize="@dimen/label_description_text"
            app:layout_constraintBottom_toTopOf="@+id/tv_description_movie_overview"
            app:layout_constraintStart_toStartOf="@+id/tv_description_movie_overview"
            app:layout_constraintTop_toTopOf="@+id/tv_description_movie_overview" />

        <TextView
            android:id="@+id/tv_description_movie_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:paddingBottom="20dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="20dp"
            android:text="@string/description_default_text_Overview"
            android:textColor="@color/description_value_overview"
            android:textSize="@dimen/value_description_overview"
            app:layout_constraintBottom_toTopOf="@id/tv_ofRV_trailers_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster_small" />

        <TextView
            android:id="@+id/tv_ofRV_trailers_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_label_rv_trailers"
            android:textColor="@color/description_label"
            android:textSize="@dimen/label_description_text"
            app:layout_constraintStart_toStartOf="@+id/tv_description_overview_label"
            app:layout_constraintTop_toBottomOf="@id/tv_description_movie_overview"
            app:layout_constraintBottom_toTopOf="@id/rv_movies_trailers" />

        <TextView
            android:id="@+id/tv_internet_trailers_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/errorBackground"
            android:padding="5dp"
            android:text="@string/internet_error_message"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/rv_movies_trailers"
            app:layout_constraintEnd_toEndOf="@id/rv_movies_trailers"
            app:layout_constraintStart_toStartOf="@id/rv_movies_trailers" />

        <ProgressBar
            android:id="@+id/pb_trailers_request"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/rv_movies_trailers"
            app:layout_constraintEnd_toEndOf="@id/rv_movies_trailers"
            app:layout_constraintStart_toStartOf="@id/rv_movies_trailers"
            app:layout_constraintTop_toTopOf="@id/rv_movies_trailers" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_movies_trailers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ofRV_trailers_label" />

        <TextView
            android:id="@+id/tv_ofRV_reviews_label"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:text="@string/description_label_rv_reviews"
            android:textColor="@color/description_label"
            android:textSize="@dimen/label_description_text"
            app:layout_constraintBottom_toTopOf="@+id/rv_movies_reviews"
            app:layout_constraintStart_toStartOf="@+id/tv_description_overview_label"
            app:layout_constraintTop_toBottomOf="@+id/rv_movies_trailers" />

        <TextView
            android:id="@+id/tv_internet_reviews_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/errorBackground"
            android:padding="5dp"
            android:text="@string/internet_error_message"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/rv_movies_reviews"
            app:layout_constraintEnd_toEndOf="@id/rv_movies_reviews"
            app:layout_constraintStart_toStartOf="@id/rv_movies_reviews" />

        <ProgressBar
            android:id="@+id/pb_reviews_request"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/rv_movies_reviews"
            app:layout_constraintEnd_toEndOf="@id/rv_movies_reviews"
            app:layout_constraintStart_toStartOf="@id/rv_movies_reviews"
            app:layout_constraintTop_toTopOf="@id/rv_movies_reviews" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_movies_reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingBottom="50dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ofRV_reviews_label" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingAB_add_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="130dp"
            android:layout_marginStart="80dp"
            android:clickable="true"
            android:tint="@color/favorite_unselected"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="@+id/iv_poster_small"
            app:layout_constraintStart_toStartOf="@+id/iv_poster_small"
            app:srcCompat="@drawable/ic_favorite_black_18px" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_tmdb_reference"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:background="#3c3c74"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/TMDB_logo_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/description_default_text_TMDB_logo"
                android:textColor="#dcdcdc"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/TMDB_logo"
                app:layout_constraintEnd_toStartOf="@+id/TMDB_logo"
                app:layout_constraintTop_toBottomOf="@+id/TMDB_logo"
                app:layout_constraintVertical_bias="0.64" />

            <ImageView
                android:id="@+id/TMDB_logo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/ic_tmdb_logo"
                android:backgroundTint="#dcdcdc"
                android:contentDescription="@string/description_default_description_image_TMDB_logo"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />
        </android.support.constraint.ConstraintLayout>


    </android.support.constraint.ConstraintLayout>
</ScrollView>